[package]
name = "jlrs-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
juliaup = "1.17"
clap = "4.5"
anyhow = "1.0"
normpath = "1.3"
thiserror = "2.0"
console = "0.16"
ctrlc = "3.4"
itertools = "0.14"
human-panic = "2.0"
env_logger = "0.11"
is-terminal = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation","Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.30", features = ["process"] }
